--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/fw.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
     <script src="./js/particle.min.js"></script>
   </head>
+
   <body>
+    <a href="https://github.com/artf/ajaxable" target="_blank" class="github-corner" aria-label="View source on Github">
+      <svg width="80" height="80" viewBox="0 0 250 250" style="fill:white; color:#20b971; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg>
+    </a>
+
     <section id="pjs-sect"></section>
+
     <section class="page-header">
       <h1 class="project-name">
         <span class="no-select">AJAXABLE</span>
@@ -21,6 +28,58 @@
       <h2 class="project-tagline">Make your forms instantly ajaxable</h2>
       <a href="https://github.com/artf/ajaxable" target="_blank" class="btn">View on GitHub</a>
       <a href="https://raw.githubusercontent.com/artf/ajaxable/master/dist/ajaxable.min.js" target="_blank" class="btn" download="ajaxable.min.js">Download</a>
+    </section>
+
+    <section class="compare container">
+      <div class="columns">
+        <div class="column col-6 comp-before bg-sec col-md-12">
+          <div class="desc">
+            <h1>Old-fashion form</h1>
+          </div>
+          <br/>
+          <form action="#forms" class="form-comp form-comp-before">
+              <div class="form-group">
+                  <label class="form-label" for="input-example-1">Name</label>
+                  <input class="form-input" id="input-example-1" placeholder="Name" type="text">
+              </div>
+              <div class="form-group">
+                  <label class="form-label" for="input-example-2">Email</label>
+                  <input class="form-input" id="input-example-2" placeholder="Email" type="email">
+              </div>
+              <div class="form-group">
+                  <label class="form-label" for="input-example-3">Message</label>
+                  <textarea class="form-input" id="input-example-3" placeholder="Textarea" rows="3"></textarea>
+              </div>
+              <div class="form-group">
+                  <button class="btn btn-primary" type="submit">Submit</button>
+              </div>
+          </form>
+        </div>
+
+        <div class="column col-6 comp-after col-md-12 bg-thr">
+          <div class="desc">
+            <h1>Ajaxable form</h1>
+          </div>
+          <br/>
+          <form action="#forms" class="form-comp form-comp-before">
+              <div class="form-group">
+                  <label class="form-label" for="input-example-1">Name</label>
+                  <input class="form-input" id="input-example-1" placeholder="Name" type="text">
+              </div>
+              <div class="form-group">
+                  <label class="form-label" for="input-example-2">Email</label>
+                  <input class="form-input" id="input-example-2" placeholder="Email" type="email">
+              </div>
+              <div class="form-group">
+                  <label class="form-label" for="input-example-3">Message</label>
+                  <textarea class="form-input" id="input-example-3" placeholder="Textarea" rows="3"></textarea>
+              </div>
+              <div class="form-group">
+                  <button class="btn btn-primary" type="submit">Submit</button>
+              </div>
+          </form>
+        </div>
+      </div>
     </section>
 
     <section class="main-content">
@@ -127,9 +186,10 @@ $ <span class="pl-c1">cd</span> ajaxable</pre></div>
     </section>
 
     <script>
-    particlesJS.load('pjs-sect', './js/particlesjs-config.json', function() {
-      console.log('callback - particles.js config loaded');
-    });
+    particlesJS.load('pjs-sect', './js/particlesjs-config.json');
     </script>
+    <style>
+      .github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
+    </style>
   </body>
 </html>
