--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <section class="multip container bg-f demo-sect">
       <div class="desc">
         <h1>Multiple instances</h1>
+        <span>Manage easily race condition</span>
       </div>
       <div class="columns">
         <div class="column col-12">
@@ -155,7 +156,7 @@
     </section>
 
     <script>
-      //particlesJS.load('pjs-sect', './js/particlesjs-config.json');
+      particlesJS.load('pjs-sect', './js/particlesjs-config.json');
     </script>
     <style>
       .github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
