--- a/index.html
+++ b/index.html
@@ -42,16 +42,79 @@
       </div>
     </section>
 
-    <section class="multip container bg-f demo-sect">
+    <section class="compare multip container bg-f demo-sect">
       <div class="desc">
         <h1>Multiple instances</h1>
         <span>Manage easily race condition</span>
       </div>
-      <div class="columns">
-        <div class="column col-12">
 
+      <div class="multi-cont width-all">
+        <div class="columns">
+          <div class="column col-6 cell1">
+            <form action="end-ajaxable.html" id="form-mult1" class="form-comp form-comp-before">
+                <div class="form-group">
+                    <label class="form-label" for="input-example-1">Name</label>
+                    <input class="form-input" id="input-example-1" placeholder="Name" type="text">
+                </div>
+                <div class="form-group">
+                    <label class="form-label" for="input-example-2">Email</label>
+                    <input class="form-input" id="input-example-2" placeholder="Email" type="email" required>
+                </div>
+                <div class="form-group">
+                    <button class="btn" type="submit">Submit</button>
+                </div>
+            </form>
+          </div>
+          <div class="column col-6 cell2">
+            <form action="end-ajaxable.html" id="form-mult2" class="form-comp form-comp-before">
+                <div class="form-group">
+                    <label class="form-label" for="input-example-1">Name</label>
+                    <input class="form-input" id="input-example-1" placeholder="Name" type="text">
+                </div>
+                <div class="form-group">
+                    <label class="form-label" for="input-example-2">Email</label>
+                    <input class="form-input" id="input-example-2" placeholder="Email" type="email" required>
+                </div>
+                <div class="form-group">
+                    <button class="btn" type="submit">Submit</button>
+                </div>
+            </form>
+          </div>
+        </div>
+        <div class="columns">
+          <div class="column col-6 cell3">
+            <form action="end-ajaxable.html" id="form-mult3" class="form-comp form-comp-before">
+                <div class="form-group">
+                    <label class="form-label" for="input-example-1">Name</label>
+                    <input class="form-input" id="input-example-1" placeholder="Name" type="text">
+                </div>
+                <div class="form-group">
+                    <label class="form-label" for="input-example-2">Email</label>
+                    <input class="form-input" id="input-example-2" placeholder="Email" type="email" required>
+                </div>
+                <div class="form-group">
+                    <button class="btn" type="submit">Submit</button>
+                </div>
+            </form>
+          </div>
+          <div class="column col-6 cell4">
+            <form action="end-ajaxable.html" id="form-mult4" class="form-comp form-comp-before">
+                <div class="form-group">
+                    <label class="form-label" for="input-example-1">Name</label>
+                    <input class="form-input" id="input-example-1" placeholder="Name" type="text">
+                </div>
+                <div class="form-group">
+                    <label class="form-label" for="input-example-2">Email</label>
+                    <input class="form-input" id="input-example-2" placeholder="Email" type="email" required>
+                </div>
+                <div class="form-group">
+                    <button class="btn" type="submit">Submit</button>
+                </div>
+            </form>
+          </div>
         </div>
       </div>
+
     </section>
 
     <section class="main-content">
@@ -156,7 +219,7 @@
     </section>
 
     <script>
-      particlesJS.load('pjs-sect', './js/particlesjs-config.json');
+      //particlesJS.load('pjs-sect', './js/particlesjs-config.json');
     </script>
     <style>
       .github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
