--- a/comp-new.html
+++ b/comp-new.html
@@ -49,7 +49,7 @@
       <div class="modal-container">
           <div class="modal-header">
               <button class="btn btn-clear float-right" onclick="hideModal()"></button>
-              <div class="modal-title">Response</div>
+              <div class="modal-title">Response demo</div>
           </div>
           <div class="modal-body">
               <div class="content" id="modal-content">
