--- a/comp-new.html
+++ b/comp-new.html
@@ -20,7 +20,7 @@
         <div class="column col-12 comp-after col-md-12 bg-thr demo-sect">
           <div class="desc">
             <h1>Ajaxable form</h1>
-            <span><code>ajaxable('#myform')</code></span>
+            <span><code>ajaxable('#myform').onResponse(showModal)</code></span>
           </div>
           <br/>
           <form action="end-ajaxable.html" id="myform" class="form-comp form-comp-before">
