--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en-us" class="bg-dark">
   <head>
     <meta charset="UTF-8">
-    <title>Ajaxable by artf</title>
+    <title>Ajaxable | Make your forms instantly ajaxable | by Artur Arseniev</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url" content="https://ajaxable.js.org/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ajaxable by Artur Arseniev">
+    <meta name="theme-color" content="#20b971">
+    <meta name="description" content="Make your forms instantly ajaxable, send requests via AJAX keeping HTML5 validations">
+    <meta name="keywords" content="js, javascript, ajax, forms, html5, validations, grapesjs">
+    <meta name="author" content="Artur Arseniev">
+    <meta property="og:description" content="Make your forms instantly ajaxable, send requests via AJAX keeping HTML5 validations">
+    <meta property="og:image" content="https://ajaxable.js.org/img/share-image.jpg">
+
     <link href="https://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/fw.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
     <script src="./js/jquery.js"></script>
     <script src="./js/particle.min.js"></script>
@@ -30,11 +42,19 @@
       <h2 class="project-tagline">Make your forms instantly ajaxable</h2>
       <a href="https://github.com/artf/ajaxable" target="_blank" class="btn">View on GitHub</a>
       <a href="https://raw.githubusercontent.com/artf/ajaxable/master/dist/ajaxable.min.js" target="_blank" class="btn" download="ajaxable.min.js">Download</a>
+
       <div class="ddown-c">
         <div class="ddown-icon-c scroll-link" data-target=".compare > div">
           <div>Learn more</div>
           <div id="ddown-icon">⟨</div>
         </div>
+      </div>
+
+      <div class="ddown-sharer">
+          <div>
+            <a class="btn-share sh-tw tooltip" data-tooltip="Tweet" target="_blank" href="https://twitter.com/intent/tweet?hashtags=ajaxable&ref_src=twsrc&text=Make%20your%20forms%20instantly%20ajaxable&url=https%3A%2F%2Fajaxable.js.org"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+            <a class="btn-share sh-fb tooltip" data-tooltip="Share" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fajaxable.js.org"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+          </div>
       </div>
     </section>
 
@@ -57,7 +77,7 @@
         </div>
         <br/>
         <br/>
-        <b>Ajaxable</b> is just a ~2KB (min + gzip) library which helps your forms degrade gracefully, maintaining progressive enhancement approach
+        <b>Ajaxable</b> is just a ~2.7KB (min + gzip) library which helps your forms degrade gracefully, maintaining progressive enhancement approach
       </div>
     </section>
 
@@ -87,7 +107,6 @@
     </section>
 
     <script>
-      //particlesJS.load('pjs-sect', './js/particlesjs-config.json');
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
